--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,8 @@
     "ag-grid-community": "^31.0.0",
     "ag-grid-react": "^31.0.0",
     "bootstrap": "4.6.2",
-    "chart.js": "3.9.1",
+    "date-fns": "^2.30.0",
     "react": ">=16.8.0",
-    "react-chartjs-2": "3.3.0",
     "react-dom": ">=16.8.0",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
@@ -20,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "start:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install --force && npm start",
     "compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
     "minify-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.min.css --output-style compressed",
     "map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
@@ -38,9 +37,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "optionalDependencies": {
-    "typescript": "5.0.4"
-  },
   "overrides": {
     "svgo": "3.0.2",
     "fsevents": "2.3.2",
