--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-DATABASE = 'postgres://admin:admin@localhost:5432/company'
+DATABASE = 'postgres://postgres:postgres@localhost:5432/company'
